--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start":"parcel index.html --open",
     "test": "test"
   },
-  "author": "Shivansh lavaniya",
+  "author": "Astitva",
   "license": "ISC",
   "dependencies": {
     "parcel": "^2.16.0",
